# certus

./: .env  .env.bak  .env.bak.1761415301  .env.example  .gitignore  Dockerfile  Makefile  PROGRESS.md  README-smoke.md  README.md  all_tracked.txt  all_tracked_after.txt  api.py  app.py  keep_paths.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  restored_files.txt  run_smoke.py  to_delete.txt  to_delete2.txt
app_pages/: crypto_quotes.py
config/: watchlist.csv
data/: certus.duckdb  cg_markets_page1.json  cg_markets_page1_trimmed.json  cg_quotes_1760925734.parquet  coinmarketcal_events_page1.json  coinmarketcal_events_trimmed.json  markets.duckdb  markets_latest.parquet  report.md
docs/: credentials_instructions.md  credentials_inventory.json
infra/: compose.yaml
mappings/: overrides.csv
pages/: 01_Markets.py  Trends.py  Trends_Pro.py  Trends_Pro_Charts.py
results/: api_check.json  smoke.json
scripts/: action_check_apis.py  backfill_history.py  backfill_prices.py  backup.sh  build_top_markets.py  calc_indicators.py  calc_scores.py  calc_signals.py  check_env.py  ci_verify.sh  dedupe_api_catalog.py  dev_smoke.sh  fetch_all_raw.py  fetch_markets.py  generate_report.py  ingest_events.py  ingest_news.py  ingest_quotes.py  ingest_sample.py  load_watchlist.py  merge_to_canonical.py  p29_run.sh  p29_run.sh.bak  p45_ingest_once.sh  p45_pipeline_once.sh  p45_smoke_all.sh  p45_step1.sh  print_leaderboard.py  refresh_trends.py  report_ambiguous_symbols.py  reset_duckdb_tables.py  reset_env.py  run_cp45_api.sh  run_ingest.sh  run_migrations.py  (+17 more)
(+68 files in other folders)
