[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "certus"
version = "0.0.1"
description = "Certus (TrendLab Intelligence Engine)"
requires-python = ">=3.10"
dependencies = ["pandas", "duckdb"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["certus*"]
